<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/category"
        android:title="@string/category"
        />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/upload"
        android:title="@string/upload"
        />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icons_chat"
        android:title="@string/chat"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        />

</menu>