<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bottom_rounded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar"
        android:padding="25dp">

        <ImageView
            android:id="@+id/college_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/college_logo"
            android:layout_marginTop="15dp"
            android:justificationMode="inter_word"
            android:text="@string/about_application"
            android:textAlignment="center"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btn_admin_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/admin_login" />

        <Button
            android:id="@+id/btn_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_admin_login"
            android:text="@string/user_login" />

        <Button
            android:id="@+id/btn_user_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_user_login"
            android:text="@string/user_registration" />

    </RelativeLayout>

</RelativeLayout>