<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:background="#fff"
    android:padding="8dp"
    android:id="@+id/container">

    <ImageView
        android:id="@+id/row_thumbnail"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/loading_shape"
        android:contentDescription="@string/book_cover_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/row_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="@string/title"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/author"
            android:maxLines="2"
            />

        <TextView
            android:id="@+id/row_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/price"
            android:textSize="18sp"
            android:textColor="#000"
            android:gravity="center" />

    </LinearLayout>
</LinearLayout>
