<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ui.BookInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/book_img"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/loading_shape"
                    android:contentDescription="@string/book_cover_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/b_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/b_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:text="@string/category"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/b_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/not_given_inr_on_app"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/b_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/author_name"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/book_details"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/b_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/b_pages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/b_publication_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/b_ISBN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/seller_details"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/s_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black" />

                <Button
                    android:id="@+id/add_to_watch_list"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_corner"
                    android:text="@string/add_to_watch_list"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10sp"/>

                <Button
                    android:id="@+id/remove_book"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/round_corner"
                    android:text="@string/remove_book"
                    android:textColor="@color/white"
                    android:layout_marginBottom="60sp"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/f1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/chat"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1"/>


<!--        <Button-->
<!--            android:id="@+id/b_make_offer"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/colorPrimary"-->
<!--            android:text="@string/make_offer"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_weight="0.5"-->
<!--            />-->
    </LinearLayout>
</RelativeLayout>
