<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/log_out"
                    android:layout_width="25dp"
                    android:layout_height="25sp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/log_out_button"
                    android:src="@drawable/img_logout" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/edit_profile"
                        android:background="@drawable/button_background"
                        android:textAllCaps="false"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bookmarked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_book_mark"
                    style="?android:attr/buttonBarButtonStyle"
                    android:contentDescription="@string/bookmarked" />

                <ImageView
                    android:id="@+id/uploaded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/upload"
                    style="?android:attr/buttonBarButtonStyle"
                    android:contentDescription="@string/uploaded" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view_uploaded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view_bookmarked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>